--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "validator": "^13.1.1"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
