--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Nehozun19",
   "license": "ISC",
-  "devDependencies": {
-    "express": "^4.17.1"
-  },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -19,7 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "12.18.3"
