--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
-    "validator": "^13.1.1",
-    "express": "^4.17.1"
+    "validator": "^13.1.1"
   },
   "engines": {
     "node": "12.18.3"
